--- a/IAMSecretToSMTPPassword/MainWindow.xaml
+++ b/IAMSecretToSMTPPassword/MainWindow.xaml
@@ -1,14 +1,20 @@
 ﻿<Window x:Class="IAMSecretToSMTPPassword.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AWS SES SMTP Password Generator" Height="215.719" Width="479.239" ResizeMode="NoResize">
-    <Grid>
-        <Button x:Name="Generate" Content="Generate" HorizontalAlignment="Left" Margin="199,135,0,0" VerticalAlignment="Top" Width="75" Click="GenerateButton_Click"/>
-        <TextBox x:Name="IAMKey" HorizontalAlignment="Left" Height="23" Margin="164,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="289"/>
-        <Label Content="IAM Secret Access Key" HorizontalAlignment="Left" Margin="22,56,0,0" VerticalAlignment="Top" Width="137"/>
-        <TextBox x:Name="SMTPPass" HorizontalAlignment="Left" Height="23" Margin="164,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="289" IsReadOnly="True"/>
-        <Label Content="SMTP Password" HorizontalAlignment="Left" Margin="22,87,0,0" VerticalAlignment="Top" Width="137"/>
-        <Label Content="AWS SES SMTP Password Generator" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="454" FontWeight="Bold" FontSize="16"/>
+        Title="AWS SES SMTP Password Generator" Height="216" Width="563.333" ResizeMode="CanResizeWithGrip" MinWidth="563.333" MinHeight="216" Icon="ABT_Color.ico">
+    <Grid Margin="0,0,0.333,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Button x:Name="Generate" Content="Generate" Margin="225,135,206.667,-34.667" VerticalAlignment="Stretch" Click="GenerateButton_Click" RenderTransformOrigin="0.751,0.844" MaxWidth="75" MinWidth="75"/>
+        <TextBox x:Name="IAMKey" Height="27" Margin="164,56,9.667,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+        <Label Content="IAM Secret Access Key" Margin="10,56,362.333,0" VerticalAlignment="Top" Height="27"/>
+        <TextBox x:Name="SMTPPass" Height="27" Margin="164,97,9.667,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" VerticalContentAlignment="Center"/>
+        <Label Content="SMTP Password" Margin="10,97,362.667,-0.333" VerticalAlignment="Top" Height="27"/>
+        <Label Content="AWS SES SMTP Password Generator" Margin="10,10,9.667,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
 
     </Grid>
 </Window>
